package mp.tfg.mycheckpoint.entity;

public class Amistad {
}
