@startuml
' Descripción del sistema CheckPoint - Gestión de videojuegos, listas y usuarios

' === ENTIDADES PRINCIPALES ===

entity Usuario {
  +id: Long
  +publicId : UUID <<identificador público>>
  nombreUsuario: String
  email: String
  contraseña: String
  fechaRegistro: DateTime
  fechaCreacion: DateTime
  fechaModificacion: DateTime
  fechaEliminacion: DateTime
}
note right of Usuario
  Representa a un usuario registrado en la aplicación.
  Puede tener listas, tier lists, juegos, configuraciones y amigos.
  La contraseña se almacena como un hash, utilizando un algoritmo seguro (BCrypt, por ejemplo).
  No se guarda la contraseña en texto plano.
end note

entity PerfilUsuario {
  +id: Long
  tema: TemaEnum
  fotoPerfil : byte[] <<BLOB>>
  notificaciones: Boolean
  visibilidadPerfil: VisibilidadEnum
  usuario_id: Long
  fechaCreacion: DateTime
  fechaModificacion: DateTime
  fechaEliminacion: DateTime
}
note right of PerfilUsuario
  Preferencias del usuario, como tema, visibilidad, foto y notificaciones.
  "Se almacena la imagen directamente como BYTEA en PostgreSQL. Tamaño máx. recomendado: 0.7 MB"
  tema: 'CLARO' | 'OSCURO'
  visibilidadPerfil: 'PUBLICO' | 'PRIVADO' | 'SOLO_AMIGOS'
end note

entity Plataforma {
  +id: Long
  idigdb: int
  nombre: String
  nombreAlternativo: String
  logoUrl: String
  fechaCreacion: DateTime
  fechaModificacion: DateTime
  fechaEliminacion: DateTime
}
note right of Plataforma
  Representa una plataforma de videojuegos (Steam, PS5, etc).
  Unifica datos internos y externos de IGDB.
  `idigdb`: ID externo de IGDB.
  `nombreAlternativo`: útil para mostrar alias o nombres comunes.
end note

entity Juego {
  +id: Long
  idigdb: Long
  nombre: String
  slug: String
  gameType: GameTypeEnum
  resumen: String
  historia: String
  totalRating: Float
  totalRatingCount: int
  fechaLanzamiento: Date
  coverUrl: String
  +generos: List<Genero>
  +motores: List<MotorGrafico>
  +modosJuego: List<ModoJuego>
  +companias: List<Compania>
  +keywords: List<Keyword>
  +plataformas: List<PlataformaIGDB>
  +temas: List<Tema>
  +perspectivas: List<PerspectivaJugador>
  status: StatusEnum
  +imagenes: List<Artwork>
  +videos: List<Video>
  +webs: List<Web>
  +idiomas: List<Idioma>
  +franquicias: List<Franquicia>
  +dlcs: List<Juego>
  +expansiones: List<Juego>
  +similares: List<Juego>
}
note right of Juego
  Información base de un videojuego, obtenida de IGDB.
  GameTypeEnum(JUEGO(1) DLC(2) EXPANSION(3))
  StatusEnum(RELEASED(1) ALPHA(2) BETA(3) EARLY_ACCESS(4) OFFLINE(5) CANCELLED(6) RUMORED(7) DELISTED(8))
end note

entity Genero {
  +id: Long
  nombre: String
}

entity MotorGrafico {
  +id: Long
  nombre: String
}

entity Compania {
  +id: Long
  nombre: String
  developer: Boolean
  publisher: Boolean
  porting: Boolean
  supporting: Boolean
}

entity Keyword {
  +id: Long
  nombre: String
}

entity ModoJuego {
  +id: Long
  nombre: String
}

entity PerspectivaJugador {
  +id: Long
  nombre: String
}

entity Artwork {
  +id: Long
  url: String
}

entity Video {
  +id: Long
  nombre: String
  videoId: String
}

entity Web {
  +id: Long
  url: String
}

entity Idioma {
  +id: Long
  nombre: String
  tipoSoporte: int
}

entity Tema {
  +id: Long
  nombre: String
}

entity Franquicia {
  +id: Long
  nombre: String
}

entity JuegoUsuario {
  +id: Long
  estado: EstadoEnum
  posesion: Boolean
  puntuacion: Float
  comentario: String
  comentarioPrivado: String
  fechaInicio: Date
  fechaFin: Date
  duracionHistoria: Float 
  duracionHistoriaSecundarias: Float 
  duracionCompletista: Float
  importado: Boolean
  plataforma_id: Long
  usuario_id: Long
  juego_id: Long
  fechaCreacion: DateTime
  fechaModificacion: DateTime
  fechaEliminacion: DateTime
}
note right of JuegoUsuario
  Relación entre un usuario y un juego con información personalizada:
  estado, comentarios, puntuación, fechas, etc.
  Completado: NO_SELECCIONAR, HISTORIA, HISTORIA_SECUNDARIAS, COMPLETADO_100
  Archivado: NO_SELECCIONAR, ABANDONADO, NO_JUGANDO
  Deseado
  Jugando: NO_SELECCIONAR, PAUSADO, INFINITO
  COMPLETADO_NO_SELECCIONAR
  COMPLETADO_HISTORIA
  COMPLETADO_HISTORIA_SECUNDARIAS
  COMPLETADO_100
  ARCHIVADO_NO_SELECCIONAR
  ARCHIVADO_ABANDONADO
  ARCHIVADO_NO_JUGANDO
  DESEADO
  JUGANDO_NO_SELECCIONAR
  JUGANDO_PAUSADO
  JUGANDO_INFINITO
end note

entity DuracionJuego {
  id_duracion: Long
  juego_id: Long
  mediaHistoria: Float
  mediaHistoriaSecundarias: Float
  mediaCompletista: Float
  numeroUsuarios: int
}

entity Lista {
  +id: Long
  nombre: String
  fechaCreacion: DateTime
  usuario_id: Long
  fechaModificacion: DateTime
  fechaEliminacion: DateTime
}
note right of Lista
  Listas creadas por los usuarios, como "Juegos de 2023", "Favoritos", etc.
end note

entity ListaJuego {
  lista_id: Long
  juego_id: Long
  fechaCreacion: DateTime
  fechaModificacion: DateTime
  fechaEliminacion: DateTime
}
note right of ListaJuego
  Asociación entre juegos y listas.
end note

entity TierList {
  +id: Long
  nombre: String
  usuario_id: Long
  fechaCreacion: DateTime
  fechaModificacion: DateTime
  fechaEliminacion: DateTime
}
note right of TierList
  Lista personalizada donde el usuario clasifica juegos en niveles.
end note

entity TierListJuego {
  tierlist_id: Long
  juego_id: Long
  nivelTier_id: Long
  fechaCreacion: DateTime
  fechaModificacion: DateTime
  fechaEliminacion: DateTime
}
note right of TierListJuego
  Asociación de juegos a una tier list con su respectivo nivel.
end note

entity NivelTier {
  id: Long
  tierlist_id: Long
  nombre: String
  orden: int
  color: String
  descripcion: String
}

entity PlataformaUsuario {
  usuario_id: Long
  plataforma_id: Long
  juegosUsuario_id: int
  fechaCreacion: DateTime
}
note right of PlataformaUsuario
  Relación entre un usuario y una plataforma.
end note

entity Ranking {
  juego_id: Long
  puntuacionMedia: Float
  numeroVotos: int
}
note right of Ranking
  Información agregada de puntuaciones de los usuarios sobre cada juego.
end note

entity Amistad {
  usuario_id: Long
  amigo_id: Long
  fechaCreacion: DateTime
  fechaModificacion: DateTime
  fechaEliminacion: DateTime
}
note right of Amistad
  Relación de amistad entre usuarios. Es autoreferencial.
end note

' === RELACIONES ===

Usuario --o PerfilUsuario : "1..1"
Usuario --o JuegoUsuario : "1..*"
Usuario --o Lista : "1..*"
Usuario --o TierList : "1..*"
Usuario --o PlataformaUsuario : "1..*"
Usuario --o Amistad : "1..*"
Juego --o JuegoUsuario : "1..*"
Juego --o ListaJuego : "1..*"
Juego --o TierListJuego : "1..*"
Juego -- Ranking : "1..1"
Juego --o Genero : "0..*"
Juego --o MotorGrafico : "0..*"
Juego --o Compania : "0..*"
Juego --o Keyword : "0..*"
Juego --o Plataforma : "0..*"
Juego --o ModoJuego : "0..*"
Juego --o PerspectivaJugador : "0..*"
Juego --o Artwork : "0..*"
Juego --o Video : "0..*"
Juego --o Web : "0..*"
Juego --o Idioma : "0..*"
Juego --o Tema : "0..*"
Juego --o Franquicia : "0..*"
Juego --o Juego : "1" dlcs "0..*"
Juego --o Juego : "1" expansiones "0..*"
Juego --o Juego : "1" similares "0..*"
Lista --o ListaJuego : "1..*"
TierList --o TierListJuego : "1..*"
TierListJuego --> NivelTier : "N..1"
Plataforma --o PlataformaUsuario : "1..*"
JuegoUsuario --> Plataforma : "N..1"
Juego -- DuracionJuego : "1..1"

@enduml